# mapGrabber

./: README.md
YourProject/: .gitignore  CMakeLists.txt  README.md  location.json
YourProject/cmake/: Findlibpostal.cmake
YourProject/src/domain/model/: location.hpp
YourProject/src/domain/service/: locationAnalyzer.hpp
YourProject/src/infrastructure/: CesiumAPI.cpp  CesiumAPI.hpp  CesiumConfig.cpp  CesiumConfig.hpp  Geocode.cpp  Geocode.hpp  OpenStreetMapAdapter.hpp
YourProject/src/ui/: main.cpp
YourProject/tests/: CMakeLists.txt
